tests/computed_props/computed_props.exp
Error: test.js:19
 19: (ColorIdToNumber[ColorId.RED]: 'ffffff'); // oops
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. Expected string literal `ffffff`, got `ff0000` instead
 19: (ColorIdToNumber[ColorId.RED]: 'ffffff'); // oops
                                    ^^^^^^^^ string literal `ffffff`

Error: test.js:21
 21: ColorIdToNumber.XXX; // oops
                     ^^^ property `XXX`. Property not found in
 21: ColorIdToNumber.XXX; // oops
     ^^^^^^^^^^^^^^^ object literal

Error: test2.js:8
  8: (ColorIdToNumber[ColorId.GREEN]: 'ffffff'); // oops
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. Expected string literal `ffffff`, got `00ff00` instead
  8: (ColorIdToNumber[ColorId.GREEN]: 'ffffff'); // oops
                                      ^^^^^^^^ string literal `ffffff`

Error: test3.js:4
  4: (ColorIdToNumber[ColorId.BLUE]: 'ffffff'); // oops
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. Expected string literal `ffffff`, got `0000ff` instead
  4: (ColorIdToNumber[ColorId.BLUE]: 'ffffff'); // oops
                                     ^^^^^^^^ string literal `ffffff`

Error: test6.js:2
  2: (o.hello: 'nothing'); // oops
      ^^^^^^^ string. Expected string literal `nothing`, got `world` instead
  2: (o.hello: 'nothing'); // oops
               ^^^^^^^^^ string literal `nothing`

Error: test7.js:2
  2: var x: string = obj['m'](); // error, number ~> string
                     ^^^^^^^^^^ Cannot assign `obj['m']()` to `x` because number [1] is incompatible with string [2].
  References:
    1: var obj = {x: 0, m() { return this.x }}
                     ^ [1]: number
    2: var x: string = obj['m'](); // error, number ~> string
              ^^^^^^ [2]: string

Error: test7.js:5
  5: var y: string = arr[0](); // error: number ~> string
                     ^^^^^^^^ Cannot assign `arr[0]()` to `y` because number [1] is incompatible with string [2].
  References:
  275:     length: number;
                   ^^^^^^ [1]: number. See lib: <BUILTINS>/core.js:275
    5: var y: string = arr[0](); // error: number ~> string
              ^^^^^^ [2]: string


Found 7 errors
